gcc/testsuite/rust/rustc/ui/parser/impl-on-unsized-typo_dg.rs
trait Tr {}

impl<T ?Sized> Tr for T {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

